// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monomer Group should apply correct style if selected 1`] = `
<div
  class="css-1vdxjys"
  data-monomer-item-id="RRMonomerName___RRName"
  data-testid="RRMonomerName___RRName"
  disabled=""
>
  <span>
    R
  </span>
  <div
    class="star "
  >
    ★
  </div>
</div>
`;

exports[`Monomer Group should render correct with title prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1jn33hb"
      >
        <div
          class="css-a0lsh8"
        >
          <span>
            Mock title
          </span>
        </div>
        <div
          class="css-14bnc38"
        >
          <div
            class="css-yx9nww"
            data-monomer-item-id="RRMonomerName___RRName"
            data-testid="RRMonomerName___RRName"
            disabled=""
          >
            <span>
              R
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-1yskl7c"
            data-monomer-item-id="mAMonomerName___mAName"
            data-testid="mAMonomerName___mAName"
            disabled=""
          >
            <span>
              m
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-1489m9i"
            data-monomer-item-id="dDMonomerName___dDName"
            data-testid="dDMonomerName___dDName"
            disabled=""
          >
            <span>
              d
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-yx9nww"
            data-monomer-item-id="arRMonomerName___arRName"
            data-testid="arRMonomerName___arRName"
            disabled=""
          >
            <span>
              ar
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-14ne5i5"
            data-monomer-item-id="LdLMonomerName___LdLRName"
            data-testid="LdLMonomerName___LdLRName"
            disabled=""
          >
            <span>
              Ld
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1jn33hb"
    >
      <div
        class="css-a0lsh8"
      >
        <span>
          Mock title
        </span>
      </div>
      <div
        class="css-14bnc38"
      >
        <div
          class="css-yx9nww"
          data-monomer-item-id="RRMonomerName___RRName"
          data-testid="RRMonomerName___RRName"
          disabled=""
        >
          <span>
            R
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-1yskl7c"
          data-monomer-item-id="mAMonomerName___mAName"
          data-testid="mAMonomerName___mAName"
          disabled=""
        >
          <span>
            m
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-1489m9i"
          data-monomer-item-id="dDMonomerName___dDName"
          data-testid="dDMonomerName___dDName"
          disabled=""
        >
          <span>
            d
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-yx9nww"
          data-monomer-item-id="arRMonomerName___arRName"
          data-testid="arRMonomerName___arRName"
          disabled=""
        >
          <span>
            ar
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-14ne5i5"
          data-monomer-item-id="LdLMonomerName___LdLRName"
          data-testid="LdLMonomerName___LdLRName"
          disabled=""
        >
          <span>
            Ld
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Monomer Group should render correct without title prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1jn33hb"
      >
        <div
          class="css-14bnc38"
        >
          <div
            class="css-yx9nww"
            data-monomer-item-id="RRMonomerName___RRName"
            data-testid="RRMonomerName___RRName"
            disabled=""
          >
            <span>
              R
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-1yskl7c"
            data-monomer-item-id="mAMonomerName___mAName"
            data-testid="mAMonomerName___mAName"
            disabled=""
          >
            <span>
              m
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-1489m9i"
            data-monomer-item-id="dDMonomerName___dDName"
            data-testid="dDMonomerName___dDName"
            disabled=""
          >
            <span>
              d
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-yx9nww"
            data-monomer-item-id="arRMonomerName___arRName"
            data-testid="arRMonomerName___arRName"
            disabled=""
          >
            <span>
              ar
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
          <div
            class="css-14ne5i5"
            data-monomer-item-id="LdLMonomerName___LdLRName"
            data-testid="LdLMonomerName___LdLRName"
            disabled=""
          >
            <span>
              Ld
            </span>
            <div
              class="star "
            >
              ★
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1jn33hb"
    >
      <div
        class="css-14bnc38"
      >
        <div
          class="css-yx9nww"
          data-monomer-item-id="RRMonomerName___RRName"
          data-testid="RRMonomerName___RRName"
          disabled=""
        >
          <span>
            R
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-1yskl7c"
          data-monomer-item-id="mAMonomerName___mAName"
          data-testid="mAMonomerName___mAName"
          disabled=""
        >
          <span>
            m
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-1489m9i"
          data-monomer-item-id="dDMonomerName___dDName"
          data-testid="dDMonomerName___dDName"
          disabled=""
        >
          <span>
            d
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-yx9nww"
          data-monomer-item-id="arRMonomerName___arRName"
          data-testid="arRMonomerName___arRName"
          disabled=""
        >
          <span>
            ar
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
        <div
          class="css-14ne5i5"
          data-monomer-item-id="LdLMonomerName___LdLRName"
          data-testid="LdLMonomerName___LdLRName"
          disabled=""
        >
          <span>
            Ld
          </span>
          <div
            class="star "
          >
            ★
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
